tests/baselines/reference/implicitAnyFunctionOverloadWithImplicitAnyReturnType.errors.txt
tests/cases/compiler/implicitAnyFunctionOverloadWithImplicitAnyReturnType.ts(3,5): error TS7010: 'funcOfIFace', which lacks return-type annotation, implicitly has an '任意' return type.


==== tests/cases/compiler/implicitAnyFunctionOverloadWithImplicitAnyReturnType.ts (1 errors) ====
    // this should be an error
    interface IFace {
        funcOfIFace();  // error at "f"
        ~~~~~~~~~~~~~~
!!! error TS7010: 'funcOfIFace', which lacks return-type annotation, implicitly has an '任意' return type.
    }
    
    // this should not be an error
    interface IFace1{
        f1(): any;
    }
    
    